[task] display tech udfs, fix plugin name jumps to 1th on save

--- a/workbench/frontend/src/app/slot-booking/components/map/map.component.scss
+++ b/workbench/frontend/src/app/slot-booking/components/map/map.component.scss
@@ -1,4 +1,4 @@
 #view_map {
-  height: 400px;
-  width: 500px;
+  height: 600px;
+  width: 800px;
 }
